--- a/index.html
+++ b/index.html
@@ -1,289 +1,274 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-  <head>
-    <!-- PAGE INFO -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OriginSix</title>
 
-    <!-- Icones -->
-    <link rel="stylesheet" href="assets 2/fonts/fonts/style.css" />
+<head>
+  <link rel="icon" type="image/png" sizes="16x16" href="logo/logo1.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-    <!-- SWIPER-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
 
-    <!-- STYLES -->
-    <link rel="stylesheet" href="style.css" />
+  <!-- PAGE INFO -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FelipeFisioterapia</title>
 
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header id="header">
-      <nav class="container">
-        <a class="logo" href="#">Felipe<span>Fisioterapia</span>.</a>
-        <!-- menu -->
-        <div class="menu">
-          <ul class="grid">
-            <li><a class="title" href="#home">Início</a></li>
-            <li><a class="title" href="#about">Sobre</a></li>
-            <li><a class="title" href="#services">Serviços</a></li>
-            <li><a class="title" href="#testimonials">Depoimentos</a></li>
-            <li><a class="title" href="#contact">Contato</a></li>
-          </ul>
-        </div>
-        <!-- /menu -->
-        <div class="toggle icon-menu"></div>
-        <div class="toggle icon-close"></div>
-      </nav>
-    </header>
+  <!-- Icones -->
+  <link rel="stylesheet" href="assets 2/fonts/fonts/style.css" />
 
-    <main>
-      <!-- HOME -->
-      <section class="section" id="home">
-        <div class="container grid">
-          <div class="image">
-            <img
-              src="assets 2/fotos/Felipe-Logo-fechado11.png"
-              alt="Logo da marca da empresa."
-            />
-          </div>
-          <div class="text">
-            <h2 class="title">Reabilitação, Prevenção e Qualidade de Vida</h2>
-            <p>
-              Uma Clínica exclusiva especializada em Fisioterapia, localizada na
-              Zona Norte de Porto Alegre.
-            </p>
-            <a class="button" href="#">Agendar um horário</a>
-          </div>
-        </div>
-      </section>
+  <!-- SWIPER-->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
-      <div class="divider-1"></div>
+  <!-- STYLES -->
+  <link rel="stylesheet" href="style.css" />
 
-      <!-- ABOUT -->
-      <section class="section" id="about">
-        <div class="container grid">
-          <div class="image">
-            <img
-              src="https://images.unsplash.com/photo-1545463913-5083aa7359a6?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGh5c2lvdGhlcmFweXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-              alt="Fisioterapeuta massageando um pé"
-            />
-          </div>
-          <div class="text">
-            <h2 class="title">Sobre nós</h2>
-            <p align="justify">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
-              beatae dicta ducimus praesentium architecto harum dolorum
-              distinctio illo earum assumenda itaque. Omnis, quam repellat.
-            </p>
-            <br />
-            <p align="justify">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-              illum ratione impedit quae eum quis adipisci asperiores, est
-              doloribus distinctio excepturi minima eius dolore! Perferendis
-              laborum illo aspernatur repellendus ipsum.
-            </p>
-            <br />
-            <p align="justify">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-              exercitationem, illum sapiente quasi hic iusto odio maiores esse
-              quaerat quis necessitatibus at odit, dolores dicta, officia ab
-              quos. Provident, quae.
-            </p>
-          </div>
-        </div>
-      </section>
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+    rel="stylesheet" />
+</head>
 
-      <div class="divider-2"></div>
+<body>
+  <header id="header">
+    <nav class="container">
+      <a class="logo" href="#">Felipe<span>Fisioterapia</span>.</a>
+      <!-- menu -->
+      <div class="menu">
+        <ul class="grid">
+          <li><a class="title" href="#home">Início</a></li>
+          <li><a class="title" href="#about">Sobre</a></li>
+          <li><a class="title" href="#services">Serviços</a></li>
+          <li><a class="title" href="#testimonials">Depoimentos</a></li>
+          <li><a class="title" href="#contact">Contato</a></li>
+        </ul>
+      </div>
+      <!-- /menu -->
+      <div class="toggle icon-menu"></div>
+      <div class="toggle icon-close"></div>
+    </nav>
+  </header>
 
-      <!-- SERVICES -->
-      <section class="section" id="services">
-        <div class="container grid">
-          <header>
-            <h2 class="title">Serviços</h2>
-            <p class="subtitle">
-              Com mais de 10 anos no mercado, o
-              <strong>Felipe Vireira FIsioterapia</strong> já conquistou
-              clientes de inúmeros países com seus tratamentos exclusivos e
-              totalmente naturais.
-            </p>
-          </header>
-          <div class="cards grid">
-            <div class="card">
-              <i
-                class="
-                  icon-iconfinder_3249818_health_treatment_massage_beauty_illustration_icon
-                "
-              ></i>
-              <h3 class="title"><q>Quiropraxia</q></h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
-              </p>
-            </div>
-            <div class="card">
-              <i class="icon-trim"></i>
-              <h3 class="title">Aculpuntura</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
-              </p>
-            </div>
-            <div class="card">
-              <i class="icon-cosmetic"></i>
-              <h3 class="title">Ventosaterapia</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- TESTIMONIALS -->
-      <section class="section" id="testimonials">
-        <div class="container">
-          <header>
-            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
-          </header>
-          <div class="testimonials swiper-container">
-            <div class="swiper-wrapper">
-              <div class="testimonial swiper-slide">
-                <blockquote>
-                  <p>
-                    <span>&ldquo;</span>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Expedita, iusto magnam! Vel mollitia sapiente.
-                  </p>
-                  <cite>
-                    <img src="assets 2/fotos/1.jpg" alt="guri narigudo" />
-                    Douglas Oliveira
-                  </cite>
-                </blockquote>
-              </div>
-
-              <div class="testimonial swiper-slide">
-                <blockquote>
-                  <p>
-                    <span>&ldquo;</span>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Expedita, iusto magnam! Vel mollitia sapiente.
-                  </p>
-                  <cite>
-                    <img
-                      src="https://randomuser.me/api/portraits/men/66.jpg"
-                      alt="careca barbudo"
-                    />
-                    Peludo Souza
-                  </cite>
-                </blockquote>
-              </div>
-
-              <div class="testimonial swiper-slide">
-                <blockquote>
-                  <p>
-                    <span>&ldquo;</span>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Expedita, iusto magnam! Vel mollitia sapiente.
-                  </p>
-                  <cite>
-                    <img
-                      src="https://randomuser.me/api/portraits/men/51.jpg"
-                      alt="gurizão de óculos"
-                    />
-                    Pilão Mat rola
-                  </cite>
-                </blockquote>
-              </div>
-            </div>
-
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-          </div>
-        </div>
-      </section>
-
-      <div class="divider-2"></div>
-
-      <!-- CONTACT -->
-      <section class="section" id="contact">
-        <div class="container grid">
-          <div class="text">
-            <h2 class="title">Entre em Contato com a Gente!</h2>
-            <p>
-              Entre em contato com a Felipe Vieira Fisioterapia, queremos tirar
-              suas dúvidas, ouvir suas críticas e sugestões.
-            </p>
-            <a
-              href="https://api.whatsapp.com/send?phone=+5551982272038&text=Oi! Gostaria de agendar uma consulta."
-              class="button"
-              target="_blank"
-              ><i class="icon-whatsapp"></i> Entrar em Contato</a
-            >
-          </div>
-
-          <div class="links">
-            <ul class="grid">
-              <li><i class="icon-phone1"></i> 51 982 272 038</li>
-              <li>
-                <i class="icon-map-pin"></i> R. Umbú, 745 - Passo d'Areia, Porto
-                Alegre - RS, 91350-100
-              </li>
-              <li><i class="icon-mail"></i> felipe.vieira.rad@gmail.com</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <div class="divider-1"></div>
-    </main>
-
-    <footer class="section">
+  <main>
+    <!-- HOME -->
+    <section class="section" id="home">
       <div class="container grid">
-        <div class="brand">
-          <a class="logo logo-alt" href="#home"
-            >Felipe<span>Fisioterapia</span>.</a
-          >
-          <p>©2021 Beautysalon.</p>
-          <p>Todos os direitos reservados.</p>
+        <div class="image">
+          <img src="assets 2/fotos/Felipe-Logo-fechado11.png" alt="Logo da marca da empresa." />
         </div>
-
-        <div class="social grid">
-          <a href="https://instagram.com" target="_blank">
-            <i class="icon-instagram"></i>
-          </a>
-          <a href="https://facebook.com" target="_blank">
-            <i class="icon-facebook"></i
-          ></a>
-          <a href="https://youtube.com" target="_blank"
-            ><i class="icon-youtube"></i
-          ></a>
+        <div class="text">
+          <h2 class="title">Reabilitação, Prevenção e Qualidade de Vida</h2>
+          <p>
+            Uma Clínica exclusiva especializada em Fisioterapia, localizada na
+            Zona Norte de Porto Alegre.
+          </p>
+          <a class="button" href="#">Agendar um horário</a>
         </div>
       </div>
-    </footer>
+    </section>
 
-    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+    <div class="divider-1"></div>
 
-    <!-- swiper -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- ABOUT -->
+    <section class="section" id="about">
+      <div class="container grid">
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1545463913-5083aa7359a6?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGh5c2lvdGhlcmFweXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt="Fisioterapeuta massageando um pé" />
+        </div>
+        <div class="text">
+          <h2 class="title">Sobre nós</h2>
+          <p align="justify">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
+            beatae dicta ducimus praesentium architecto harum dolorum
+            distinctio illo earum assumenda itaque. Omnis, quam repellat.
+          </p>
+          <br />
+          <p align="justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            illum ratione impedit quae eum quis adipisci asperiores, est
+            doloribus distinctio excepturi minima eius dolore! Perferendis
+            laborum illo aspernatur repellendus ipsum.
+          </p>
+          <br />
+          <p align="justify">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
+            exercitationem, illum sapiente quasi hic iusto odio maiores esse
+            quaerat quis necessitatibus at odit, dolores dicta, officia ab
+            quos. Provident, quae.
+          </p>
+        </div>
+      </div>
+    </section>
 
-    <!-- scrollreveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <div class="divider-2"></div>
 
-    <!-- main.js -->
-    <script src="main.js"></script>
-  </body>
+    <!-- SERVICES -->
+    <section class="section" id="services">
+      <div class="container grid">
+        <header>
+          <h2 class="title">Serviços</h2>
+          <p class="subtitle">
+            Com mais de 10 anos no mercado, o
+            <strong>Felipe Vireira FIsioterapia</strong> já conquistou
+            clientes de inúmeros países com seus tratamentos exclusivos e
+            totalmente naturais.
+          </p>
+        </header>
+        <div class="cards grid">
+          <div class="card">
+            <i class="
+                  icon-iconfinder_3249818_health_treatment_massage_beauty_illustration_icon
+                "></i>
+            <h3 class="title"><q>Quiropraxia</q></h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              distinctio neque blanditiis, dolorem aperiam nulla explicabo
+              asperiores
+            </p>
+          </div>
+          <div class="card">
+            <i class="icon-trim"></i>
+            <h3 class="title">Aculpuntura</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              distinctio neque blanditiis, dolorem aperiam nulla explicabo
+              asperiores
+            </p>
+          </div>
+          <div class="card">
+            <i class="icon-cosmetic"></i>
+            <h3 class="title">Ventosaterapia</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              distinctio neque blanditiis, dolorem aperiam nulla explicabo
+              asperiores
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- TESTIMONIALS -->
+    <section class="section" id="testimonials">
+      <div class="container">
+        <header>
+          <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+        </header>
+        <div class="testimonials swiper-container">
+          <div class="swiper-wrapper">
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Expedita, iusto magnam! Vel mollitia sapiente.
+                </p>
+                <cite>
+                  <img src="assets 2/fotos/1.jpg" alt="guri narigudo" />
+                  Douglas Oliveira
+                </cite>
+              </blockquote>
+            </div>
+
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Expedita, iusto magnam! Vel mollitia sapiente.
+                </p>
+                <cite>
+                  <img src="https://randomuser.me/api/portraits/men/66.jpg" alt="careca barbudo" />
+                  Peludo Souza
+                </cite>
+              </blockquote>
+            </div>
+
+            <div class="testimonial ">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Expedita, iusto magnam! Vel mollitia sapiente.
+                </p>
+                <cite>
+                  <img src="https://randomuser.me/api/portraits/men/51.jpg" alt="gurizão de óculos" />
+                  Pilão Mat rola
+                </cite>
+              </blockquote>
+            </div>
+          </div>
+
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+
+    <div class="divider-2"></div>
+
+    <!-- CONTACT -->
+    <section class="section" id="contact">
+      <div class="container grid">
+        <div class="text">
+          <h2 class="title">Entre em Contato com a Gente!</h2>
+          <p>
+            Entre em contato com a Felipe Vieira Fisioterapia, queremos tirar
+            suas dúvidas, ouvir suas críticas e sugestões.
+          </p>
+          <a href="https://api.whatsapp.com/send?phone=+5551982272038&text=Oi! Gostaria de agendar uma consulta."
+            class="button" target="_blank"><i class="icon-whatsapp"></i> Entrar em Contato</a>
+        </div>
+
+        <div class="links">
+          <ul class="grid">
+            <li><i class="icon-phone1"></i> 51 982 272 038</li>
+            <li>
+              <i class="icon-map-pin"></i> R. Umbú, 745 - Passo d'Areia, Porto
+              Alegre - RS, 91350-100
+            </li>
+            <li><i class="icon-mail"></i> felipe.vieira.rad@gmail.com</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <div class="divider-1"></div>
+  </main>
+
+  <footer class="section">
+    <div class="container grid">
+      <div class="brand">
+        <a class="logo logo-alt" href="#home">Felipe<span>Fisioterapia</span>.</a>
+        <p>©2021 Beautysalon.</p>
+        <p>Todos os direitos reservados.</p>
+      </div>
+
+      <div class="social grid">
+        <a href="https://instagram.com" target="_blank">
+          <i class="icon-instagram"></i>
+        </a>
+        <a href="https://facebook.com" target="_blank">
+          <i class="icon-facebook"></i></a>
+        <a href="https://youtube.com" target="_blank"><i class="icon-youtube"></i></a>
+      </div>
+    </div>
+  </footer>
+
+  <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
+  <!-- swiper -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+  <!-- scrollreveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <!-- main.js -->
+  <script src="main.js"></script>
+</body>
+
 </html>
