--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </header>
         <div class="testimonials swiper-container">
           <div class="swiper-wrapper">
-            <div class="testimonial">
+            <div class="testimonial swiper-slide">
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
@@ -174,7 +174,7 @@
               </blockquote>
             </div>
 
-            <div class="testimonial">
+            <div class="testimonial swiper-slide">
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
@@ -188,7 +188,7 @@
               </blockquote>
             </div>
 
-            <div class="testimonial ">
+            <div class="testimonial swiper-slide">
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
