--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </p>
                 <cite>
                   <img src="https://randomuser.me/api/portraits/men/66.jpg" alt="careca barbudo" />
-                  Peludo Souza
+                  Lucas Souza
                 </cite>
               </blockquote>
             </div>
@@ -197,7 +197,7 @@
                 </p>
                 <cite>
                   <img src="https://randomuser.me/api/portraits/men/51.jpg" alt="gurizão de óculos" />
-                  Pilão Mat rola
+                  Rodrigo Mat
                 </cite>
               </blockquote>
             </div>
